RR.SEBRAE.CLUSTER/sistema-avaliacao/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sistema-avaliacao
  namespace: sistema-avaliacao
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sistema-avaliacao
  template:
    metadata:
      labels:
        app: sistema-avaliacao
    spec:
      imagePullSecrets:
        - name: harbor-secret
      containers:
        - name: sistema-avaliacao
          image: harbor.rr.sebrae.com.br/sistema-avaliacao/sistema-avaliacao:v1.0.1
          ports:
            - containerPort: 80
            - containerPort: 443
          volumeMounts:
            - name: tls-secret
              mountPath: /etc/ssl/certs
              readOnly: true
            - name: laravel-env-volume
              mountPath: /var/www/html/.env
              subPath: .env
      volumes:
        - name: laravel-env-volume
          configMap:
            name: laravel-staging-env
        - name: tls-secret
          secret:
            secretName: ssl-sebrae
