RR.SEBRAE.CLUSTER/sistema-avaliacao/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sistema-avaliacao-service
  namespace: sistema-avaliacao
spec:
  type: ClusterIP
  selector:
    app: sistema-avaliacao
  ports:
    - name: https
      port: 443
      targetPort: 443
    - name: http
      port: 80
      targetPort: 80
